fix: Resolve requestAnimationFrame/polyfill warning

--- a/readable/package.json
+++ b/readable/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -19,7 +20,8 @@
   },
   "jest": {
     "setupFiles": [
-      "./config/jestsetup.js"
+      "<rootDir>/config/shim.js",
+      "<rootDir>/config/jestsetup.js"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
