--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "form-serialize": "^0.7.2",
+    "immutability-helper": "^2.6.6",
     "prop-types": "^15.6.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
