--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "form-serialize": "^0.7.2",
     "immutability-helper": "^2.6.6",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
